--- a/public/assets/css/admin/style.css
+++ b/public/assets/css/admin/style.css
@@ -1,6 +1,51 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:weight@100;200;300;400;500;600;700;800&display=swap");
+
 body {
     overflow-x:hidden;
 }
 input {
     border-radius: 0px;
 }
+.breadcrumb {
+    background-color: #f8f9fd;
+}
+.file-input {
+    max-height: 38px;
+}
+.custom-alert {
+    max-height: 32px;
+    display: flex;
+    align-items: center;
+}
+.view-course-img {
+    text-decoration: underline;
+    cursor: pointer;
+}
+/* admin course search */
+.search{
+position: relative;
+box-shadow: 0 0 40px rgba(51, 51, 51, .1); 
+}
+.search input{
+height: 60px;
+text-indent: 25px;
+border: 2px solid #d6d4d4;
+}
+.search input:focus{
+box-shadow: none;
+border: 2px solid #1089ff;
+}
+.search .fa-search{
+position: absolute;
+top: 20px;
+left: 16px;
+}
+.search button{
+position: absolute;
+top: 5px;
+right: 5px;
+height: 50px;
+width: 110px;
+background: #1089ff;
+}
+/*  */
